# python-for-de-tutorial

./: .gitignore  README.md  main.py  pyproject.toml
data/: customer.csv  orders.csv
notebooks/: solutions.ipynb  test_transform.py  workshop.ipynb
